RET-3462final refactored methods & added new import